--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Animated Login Form 02</title>
-    <link rel="stylesheet" href="style.css" >
-</head>
-<body>
-    <div class="box">
-        <span class="borderLine"></span>
-        <form>
-         <h2>Sign in</h2>
-         <div class="inputBox">
-                <input type="text" required="required">
-                    <span>Username</span>
-    <i></i>
-    </div>
-    <div class="inputBox">
-        <input type="password" required="required">
-        <span>Password</span>
-        <i></i>
-        </div>
-        <div class="links">
-            <a href="#">Forgot Password</a>
-            <a href="#">Signup</a>
-            </div>
-            <input type="submit" value="Login">
-        </form>
-  
 
-</div>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    
+    <div class="container">
+        <div class="result">
+            <span>0</span>
+            </div>
+
+            <div class="buttons">
+                <button class="item item1 clear">AC</button>
+                <button class="item item1 negative" value="+/-">+/-</button>
+                <button class="item percent sign" value="%">%</button>
+                <button class="item item3 sign" value="/">/</button>
+                <button class="item numbers" value="7">7</button>
+                 <button class="item numbers"value="8">8</button>
+                 <button class="item numbers" value="9">9</button>
+                 <button class="item item3 sign" value="*">*</button>
+                 <button class="item numbers" value="4">4</button>
+                 <button class="item numbers" value="5">5</button>
+                 <button class="item numbers" value="6">6</button>
+                 <button class="item item3 sign" value="-">-</button>
+                 <button class="item numbers" value="1">1</button>
+                 <button class="item numbers" value="2">2</button>
+                 <button class="item numbers" value="3">3</button>
+                 <button class="item item3 sign" value="+">+</button>
+                 <button class="item itemZero numbers" value="0">0</button>
+                 <button class="item  comma">,</button>
+                 <button class="item item3 equals">=</button>
+
+                 
+                 </div>
+     </div>
+
+
+    <script src="index.js"></script> 
 </body>
 </html>
-
-
